# sub-dwm

./: CMakeLists.txt  Makefile
src/: config.def.h  drw.c  drw.h  dts.h  dwm.c  dwm.h  util.c  util.h
